--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,3 +12,9 @@
     border-radius: @radius;
     cursor: pointer;
 }
+
+.animations(@ani-name, @duration) {
+    animation-name: @ani-name;
+    animation-duration: @duration;
+    animation-iteration-count: infinite;
+}
