--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,9 @@
     .flex(column, center, center);
     background: @nav-bg;
     border-bottom: 1px solid @nav-border;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    opacity: 0.7;
     h1 {
         font-size: 4rem;
         text-align: center;
@@ -21,9 +24,11 @@
             font-size:1.2rem;
             padding: 10px 2.5%;
             border-radius: 5px;
+            // &:hover {
+            //     background: black;
+            //     color: white;
             &:hover {
-                background: black;
-                color: white;
+                .animations(pulse, 3s);
             }
         }
     }
