--- a/less/variables.less
+++ b/less/variables.less
@@ -25,3 +25,30 @@
 
 // Mobile var
 @phone: (max-width: 500px);
+
+// Animation
+// nav buttons
+@keyframes pulse {
+    0% {
+        background: @nav-bg
+    }
+    50% {
+        background: black;
+        color: white;
+    }
+    100% {
+        background: @nav-bg
+    }
+}
+// sign up button
+@keyframes bottom-pulse {
+    0% {
+        .buttons(white, #22283a, 5px)
+    }
+    50% {
+        .buttons(#22283a, @shuttle-gray, 50px)
+    }
+    100% {
+        .buttons(white, #22283a, 5px)
+    }
+}
